--- a/Todo.html
+++ b/Todo.html
@@ -2,12 +2,143 @@
 <html>
 
 <head>
-    <title>Welcome</title>
+    <title>
+        SurfCode
+    </title>
 </head>
 
 <body>
-    <h1>Zagolovok</h1>
-    <p>Main text</p>
+    <div style="position: relative;background-color: #17a589;width: 100%;height: 100px; top: -30px ">
+        <h1 style="position: relative;text-align: center;top: 25px">Добро пожаловать!</h1>
+    </div>
+    <div>
+        <h2 style="position: relative;text-align: center;top: -25px">Это мой первый обучающий сайт.</h2>
+        <h3 style="position: relative;text-align: center;top: -25px">Здесь вы узнаете о самых популярных языках программирования и где они используются</h3>
+    </div>
+    <div>
+        <ul>
+            <button style="position: relative;background-color: #76d7c4"><li><a href="#python">Python</a></li></button>
+            <button style="position: relative;background-color: #76d7c4"><li><a href="#js">JS</a></li></button>
+            <button style="position: relative;background-color: #76d7c4"><li><a href="#java">Java</a></li></button>
+            <button style="position: relative;background-color: #76d7c4"><li><a href="#c#">C#</a></li></button>
+            <button style="position: relative;background-color: #76d7c4"><li><a href="#c">C</a></li></button>
+            <button style="position: relative;background-color: #76d7c4"><li><a href="#c++">C++</a></li></button>
+            <button style="position: relative;background-color: #76d7c4"><li><a href="#go">GO</a></li></button>
+            <button style="position: relative;background-color: #76d7c4"><li><a href="#r">R</a></li></button>
+            <button style="position: relative;background-color: #76d7c4"><li><a href="#swift">Swift</a></li></button>
+            <button style="position: relative;background-color: #76d7c4"><li><a href="#php">PHP</a></li></button>
+        </ul>
+    </div>
+    <section id="python">
+        <div>
+            <hr>
+            <h4 style="position: relative;text-align: center;">Python</h4>
+            <p style="position: relative;left: 3%;width: 97%; top: 40%;">
+                <img style="position: relative;width: 200px; height: 200px; right: 2%;" src="img/img1.png">
+            </p>
+            <br>
+            <a style="position: relative; left: 3%" href="file:///C:/Users/Juliya/Desktop/SurfCode/html.html">1.Python</a>
+        </div>
+    </section>
+    <section id="js">
+        <div>
+            <hr>
+            <h4 style="position: relative;text-align: center;">JS</h4>
+            <p style="position: relative;left: 3%;width: 97%; top: 40%;">
+                <img style="position: relative;width: 200px; height: 200px; right: 2%;" src="img/img2.png">
+            </p>
+            <br>
+            <a style="position: relative; left: 3%" href="file:///C:/Users/Juliya/Desktop/SurfCode/html.html">1.Python</a>
+        </div>
+    </section>
+    <section id="java">
+        <div>
+            <hr>
+            <h4 style="position: relative;text-align: center;">Java</h4>
+            <p style="position: relative;left: 3%;width: 97%; top: 40%;">
+                <img style="position: relative;width: 200px; height: 200px; right: 2%;" src="img/img3.png">
+            </p>
+            <br>
+            <a style="position: relative; left: 3%" href="file:///C:/Users/Juliya/Desktop/SurfCode/html.html">1.Python</a>
+        </div>
+    </section>
+    <section id="c#">
+        <div>
+            <hr>
+            <h4 style="position: relative;text-align: center;">C#</h4>
+            <p style="position: relative;left: 3%;width: 97%; top: 40%;">
+                <img style="position: relative;width: 200px; height: 200px; right: 2%;" src="img/img4.png">
+            </p>
+            <br>
+            <a style="position: relative; left: 3%" href="file:///C:/Users/Juliya/Desktop/SurfCode/html.html">1.Python</a>
+        </div>
+    </section>
+    <section id="c">
+        <div>
+            <hr>
+            <h4 style="position: relative;text-align: center;">C</h4>
+            <p style="position: relative;left: 3%;width: 97%; top: 40%;">
+                <img style="position: relative;width: 200px; height: 200px; right: 2%;" src="img/img5.png">
+            </p>
+            <br>
+            <a style="position: relative; left: 3%" href="file:///C:/Users/Juliya/Desktop/SurfCode/html.html">1.Python</a>
+        </div>
+    </section>
+    <section id="c++">
+        <div>
+            <hr>
+            <h4 style="position: relative;text-align: center;">C++</h4>
+            <p style="position: relative;left: 3%;width: 97%; top: 40%;">
+                <img style="position: relative;width: 200px; height: 200px; right: 2%;" src="img/img6.png">
+            </p>
+            <br>
+            <a style="position: relative; left: 3%" href="file:///C:/Users/Juliya/Desktop/SurfCode/html.html">1.Python</a>
+        </div>
+    </section>
+    <section id="go">
+        <div>
+            <hr>
+            <h4 style="position: relative;text-align: center;">GO</h4>
+            <p style="position: relative;left: 3%;width: 97%; top: 40%;">
+                <img style="position: relative;width: 200px; height: 200px; right: 2%;" src="img/img7.png">
+            </p>
+            <br>
+            <a style="position: relative; left: 3%" href="file:///C:/Users/Juliya/Desktop/SurfCode/html.html">1.Python</a>
+        </div>
+    </section>
+    <section id="r">
+        <div>
+            <hr>
+            <h4 style="position: relative;text-align: center;">R</h4>
+            <p style="position: relative;left: 3%;width: 97%; top: 40%;">
+                <img style="position: relative;width: 200px; height: 200px; right: 2%;" src="img/img8.png">
+            </p>
+            <br>
+            <a style="position: relative; left: 3%" href="file:///C:/Users/Juliya/Desktop/SurfCode/html.html">1.Python</a>
+        </div>
+    </section>
+    <section id="swift">
+        <div>
+            <hr>
+            <h4 style="position: relative;text-align: center;">Swift</h4>
+            <p style="position: relative;left: 3%;width: 97%; top: 40%;">
+                <img style="position: relative;width: 200px; height: 200px; right: 2%;" src="img/img9.png">
+            </p>
+            <br>
+            <a style="position: relative; left: 3%" href="file:///C:/Users/Juliya/Desktop/SurfCode/html.html">1.Python</a>
+        </div>
+    </section>
+    <section id="php">
+        <div>
+            <hr>
+            <h4 style="position: relative;text-align: center;">PHP</h4>
+            <p style="position: relative;left: 3%;width: 97%; top: 40%;">
+                <img style="position: relative;width: 200px; height: 200px; right: 2%;" src="img/img10.png">
+            </p>
+            <br>
+            <a style="position: relative; left: 3%" href="file:///C:/Users/Juliya/Desktop/SurfCode/html.html">1.Python</a>
+        </div>
+    </section>
 </body>
 
 </html>
